fixing height issue on mobile in hero section

--- a/css/modulo-neuroimmune.css
+++ b/css/modulo-neuroimmune.css
@@ -736,6 +736,7 @@ h1 {
   }
 
   .hero-section {
+    height: auto;
     min-height: auto;
   }
 
